--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "vue-kinesis": "^2.0.5",
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "yarn": "^1.22.19"
   }
 }
