--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
+    "@types/nodemailer": "^6.4.6",
     "nuxt": "3.0.0-rc.13",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0"
   },
   "dependencies": {
+    "nodemailer": "^6.8.0",
     "vue-kinesis": "^2.0.5",
     "webpack": "^5.75.0",
     "yarn": "^1.22.19"
